--- a/models/staging/stripe/_src_stripe.yml
+++ b/models/staging/stripe/_src_stripe.yml
@@ -6,3 +6,8 @@ sources:
       tables:
         - name: payments
           description: One record per payment.
+          config:
+            loaded_to_field: _batched_at
+            freshness:
+              warn_after: {count: 12, period: hour}
+              error_after: {count: 24, period: hour}
