--- a/models/staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_src_jaffle_shop.yml
@@ -6,5 +6,15 @@ sources:
       tables:
           - name: customers
             description: One record per customer.
+            columns:
+              - name: id
+                tests:
+                  - unique
+                  - not_null
           - name: orders
             description: One record per order. Includes cancelled and deleted orders.
+            columns:
+              - name: id
+                tests:
+                  - unique
+                  - not_null
