--- a/models/staging/jaffle_shop/_stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_stg_jaffle_shop.yml
@@ -19,6 +19,12 @@ models:
           - not_null
           - unique
 
+      - name: customer_id
+        tests:
+          - relationships:
+              to: ref('stg_jaffle_shop__customers')
+              field: customer_id
+
       - name: status
         description: Order status
         tests:
