--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,3 +31,4 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dbt_tutorial_snowflake:
+    +materialized: view
