--- a/models/staging/stripe/_src_stripe.yml
+++ b/models/staging/stripe/_src_stripe.yml
@@ -7,7 +7,7 @@ sources:
         - name: payments
           description: One record per payment.
           config:
-            loaded_to_field: _batched_at
+            loaded_at_field: _batched_at
             freshness:
               warn_after: {count: 12, period: hour}
               error_after: {count: 24, period: hour}
