--- a/models/staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_src_jaffle_shop.yml
@@ -8,13 +8,13 @@ sources:
             description: One record per customer.
             columns:
               - name: id
-                tests:
+                data_tests:
                   - unique
                   - not_null
           - name: orders
             description: One record per order. Includes cancelled and deleted orders.
             columns:
               - name: id
-                tests:
+                data_tests:
                   - unique
                   - not_null
