--- a/models/staging/jaffle_shop/_stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_stg_jaffle_shop.yml
@@ -15,25 +15,23 @@ models:
     columns:
       - name: order_id
         description: Primary key for orders
-        tests:
+        data_tests:
           - not_null
           - unique
 
       - name: customer_id
         description: Foreign key referencing customers
-        tests:
+        data_tests:
           - not_null
           - unique
-
-        data_tests:
           - relationships:
-                arguments:
+              arguments:
+                - to: ref('stg_jaffle_shop__customers')
                   field: customer_id
-                  to: ref('stg_jaffle_shop__customers')
-
+                  
       - name: status
         description: "{{ doc('order_status')}}"
-        tests:
+        data_tests:
           - accepted_values:
               arguments:
                 values: ['completed', 'placed', 'return_pending', 'returned', 'shipped']
