--- a/packages.yml
+++ b/packages.yml
@@ -10,3 +10,6 @@ packages:
 
   - package: dbt-labs/dbt_project_evaluator
     version: [">=1.1.0", "<1.2.0"]
+
+  - package: dbt-labs/dbt_project_evaluator
+    version: [latest_version]
